moved file in the correct dir

--- a/Documentation/Tex/RottenMovies documentation.tex
+++ b/Documentation/Tex/RottenMovies documentation.tex
@@ -4,7 +4,7 @@
 \usepackage{blindtext}
 \usepackage{titlesec}
 \usepackage{ragged2e}
-\graphicspath{{./images}}
+\graphicspath{{./../../images}}
 
 \author{Fabio Piras, Giacomo Volpi, Guillaume Quint}
 \title{Large-Scale adn Multi-structured Databases - Project: Rotten Movies}
