add module structure and did some test with preamble file

--- a/Documentation/Tex/RottenMovies documentation.tex
+++ b/Documentation/Tex/RottenMovies documentation.tex
@@ -1,10 +1,4 @@
-\documentclass[12]{article}
-\usepackage[margin=1.5cm]{geometry}
-\usepackage{graphicx}
-\usepackage{blindtext}
-\usepackage{titlesec}
-\usepackage{ragged2e}
-\graphicspath{{./../../images}}
+\include{preamble.tex}
 
 \author{Fabio Piras, Giacomo Volpi, Guillaume Quint}
 \title{Large-Scale adn Multi-structured Databases - Project: Rotten Movies}
@@ -17,23 +11,18 @@
 \end{figure}
 
 \maketitle
-\centering
-a.a: 2021-2022
+
 
 \newpage
 
 \tableofcontents
 
 
-\newpage
 
-\section{Introduction}
-\justifying
-\blindtext
+\include{Hello world.tex}
 
-\section{second section}
+\chapter{second chapter}
 \blindtext
-\newpage
 
 
 
