--- a/Documentation/Tex/RottenMovies documentation.tex
+++ b/Documentation/Tex/RottenMovies documentation.tex
@@ -1,4 +1,4 @@
-\include{preamble.tex}
+\include{./Preamble/preamble.tex}
 
 \author{Fabio Piras, Giacomo Volpi, Guillaume Quint}
 \title{Large-Scale adn Multi-structured Databases - Project: Rotten Movies}
@@ -19,11 +19,9 @@
 
 
 
-\include{Hello world.tex}
+\include{./Introduction/Intruduction.tex}
 
-\chapter{second chapter}
-\blindtext
-
+\include{./Feasibility Study/Feasibility_Study.tex}
 
 
 \end{document}
