modify dir structure to deal with path issues

--- a/Documentation/Tex/TexFiles/RottenMovies documentation.tex
+++ b/Documentation/Tex/TexFiles/RottenMovies documentation.tex
@@ -1,4 +1,4 @@
-\include{./Preamble/preamble.tex}
+\include{./preamble.tex}
 
 \author{Fabio Piras, Giacomo Volpi, Guillaume Quint}
 \title{Large-Scale adn Multi-structured Databases - Project: Rotten Movies}
@@ -19,11 +19,11 @@
 
 
 
-\include{./Introduction/Intruduction.tex}
+\include{./Intruduction.tex}
 
-\include{./Feasibility Study/Feasibility_Study.tex}
+\include{./Feasibility_Study.tex}
 
-\include{./Appendix/appendix.tex}
+\include{./appendix.tex}
 
 
 \end{document}
