--- a/Documentation/Tex/TexFiles/preamble.tex
+++ b/Documentation/Tex/TexFiles/preamble.tex
@@ -76,7 +76,7 @@
       {]}{{{\color{delim}{]}}}}{1},
 }
 \usepackage{xr}
-\externaldocument{./../Appendix/appendix}
+\externaldocument{./appendix}
 \newcommand{\cref}[1]{(Appendix \ref{#1})}
 
 
