add design chapter

--- a/Documentation/Tex/TexFiles/RottenMovies documentation.tex
+++ b/Documentation/Tex/TexFiles/RottenMovies documentation.tex
@@ -6,7 +6,8 @@
 \begin{document}
 \begin{figure}
 \centering
-\includegraphics[scale=0.75]{cherubino}
+%the path originates from the lsmsdb root folder
+\includegraphics[scale=0.75]{/images/cherubino}
 
 \end{figure}
 
@@ -19,11 +20,11 @@
 
 
 
-\include{./Intruduction.tex}
+%\include{./Intruduction.tex}
 
-\include{./Feasibility_Study.tex}
+%\include{./Feasibility_Study.tex}
 
-\include{./appendix.tex}
+%\include{./appendix.tex}
 
 
 \end{document}
