--- a/Documentation/Tex/TexFiles/preamble.tex
+++ b/Documentation/Tex/TexFiles/preamble.tex
@@ -39,7 +39,7 @@
 \usepackage{titlesec}
 \usepackage{ragged2e}
 \usepackage{import}
-\graphicspath{{./../../images}}
+\graphicspath{{./../../../}}
 
 \definecolor{delim}{RGB}{20,105,176}
 \definecolor{numb}{RGB}{106, 109, 32}
