add documentDB chapter unfinished, same for graphDB

--- a/Documentation/Tex/TexFiles/Design.tex
+++ b/Documentation/Tex/TexFiles/Design.tex
@@ -1,6 +1,7 @@
 \include{./preamble}
 \begin{document}
 \chapter{Design}
+\justifying
 \section{Main actors}
 As already mentioned in the introduction we have mainly three major actors: guest user and register user, the latter can be divided between normal user and top critic. In addition there is an admin actor who's main role is to oversee the entire service.
 \section{Functional requirements}
