--- a/Documentation/Tex/TexFiles/GarphDB.tex
+++ b/Documentation/Tex/TexFiles/GarphDB.tex
@@ -3,7 +3,7 @@
 \chapter{Graph database}
 \justifying
 The DBSM chosen for the graph database is Neo4j, it was use to manege the social part of the site and also to keep track of the reviews made for the feed and suggestion functionality.
-%ADD SUGGESTION FUNTIONALITY IN DESIGN CHAPTER
+
 
 The entities used in the database are:
 \begin{itemize}
@@ -53,6 +53,43 @@ As previously stated in the Feasibility study section \ref{sec:result}, the grap
 The \emph{id} attributes is common to all nodes and it stores a string which is also used as id by the document database in the \emph{\textunderscore id} field, this choice was made so that we could have a way to identify the same object across the different databases with only one string from the application. Due to the OOP language used to build the latter the data was manipulated with classes containing the id of the object so, to improved the performance of the graph database we decided to use the \emph{id} attribute as a index. 
 
 Below the information in a json format from the Neo4j DBSM about the new index (some attributes were omitted for space)
-
 \lstinputlisting[language=json]{./../code/graphIndex.json}
+
+We then proceed to confront the profile of the queries with and without the above indexes, here we can see the result of this analysis: 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.33]{/images/neo4j_stats/find_movie_by_id.png}
+\caption{search by id without and with movie\textunderscore id \textunderscore index}
+\label{fig:movieId}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.33]{/images/neo4j_stats/find_user_by_id.png}
+\caption{search by id without and with user\textunderscore id \textunderscore index}
+\label{fig:userId}
+\end{center}
+\end{figure}
+
+
+\section{Queries}
+In the following section we will show the queries that drove the design of the graph database.
+\begin{center}
+\begin{tabular}{|p{8cm} ||p{8cm}|}
+\hline
+Graph-Centric Query & Domain-Specific Query \\
+\hline\hline
+Which are the User nodes with the most outgoing edges of type REVIEWED & Which are the non top critic user with most reviews made\\
+\hline
+Which are the TopCritic nodes with the most incoming edges of type FOLLOWS & Which are the most followed top critics \\
+\hline
+Which are the Movies nodes that have been most recently connected with TopCritic nodes by a REVIEWED relationship meanwhile the latter are connected to a User node with a FOLLOWS relationship & Which are the latest reviewed movies by a followed top critics given a starting user \\
+\hline
+Which are the User and TopCritic nodes that have outgoing REVIEWED edges to the same Movie node without having a FOLLOWS edge between them, which of these TopCritic nodes have more similar attribute on the REVIEWED relationship with the one on the same type going towards the same Movie node given a User node & Which are the non-followed top critics with the most affinity towards a given user\\
+\hline
+Which Movie nodes have different ratio of freshness in the incoming REVIEWED edges spitted in base of their date attribute & Which movies have been targeted by review bombing in the last x month\\
+\hline
+\end{tabular}
+\end{center}
 \end{document}
