add modules and code organization chapter

--- a/Documentation/Tex/TexFiles/appendix.tex
+++ b/Documentation/Tex/TexFiles/appendix.tex
@@ -70,9 +70,8 @@ Before the index
 After the index
 \lstinputlisting[language=JavaScript]{./../code/executionStats/find_date_of_birth_with_index}
 
-\section{matematica}\label{eq:pippo}
-\begin{equation}\label{pippo}
-x^2-5x+6=0
-\end{equation}
+\section{Application code}
+\subsection{Pom.xml}\label{subsec:pom}
+\lstinputlisting[language=xml]{./../code/pom.xml}
 \end{alphasection}
 \end{document}
