Make main documentation as default compiling

--- a/Documentation/Tex/TexFiles/DocumentDB.tex
+++ b/Documentation/Tex/TexFiles/DocumentDB.tex
@@ -1,5 +1,5 @@
-\include{./preamble}
-\begin{document}
+%\include{./preamble}
+%\begin{document}
 \chapter{Document database}
 \justifying
 In this chapter we will discuss of the organization of the document database and how we handled the replicas. We decided to use MongoDB as DBMS for the document database for the purpose of storing the main information for movies, users, reviews and personnel. In MongoDB we created the following three collection: 
@@ -68,4 +68,4 @@ In this section we shall discuss on the different aggregation that the applicati
 
 \subsection{Return the number of user divided by an age bucket}\label{subsec:userPopulationBucket}
 \lstinputlisting[language=JavaScript]{./../code/userPopulationBucket.js}
- \end{document}
+ %\end{document}
