--- a/Documentation/Tex/TexFiles/GarphDB.tex
+++ b/Documentation/Tex/TexFiles/GarphDB.tex
@@ -1,5 +1,5 @@
-\include{./preamble}
-\begin{document}
+%\include{./preamble}
+%\begin{document}
 \chapter{Graph database}
 \justifying
 The DBSM chosen for the graph database is Neo4j, it was use to manege the social part of the site and also to keep track of the reviews made for the feed and suggestion functionality.
@@ -92,4 +92,4 @@ Which Movie nodes have different ratio of freshness in the incoming REVIEWED edg
 \hline
 \end{tabular}
 \end{center}
-\end{document}
+%\end{document}
