--- a/Documentation/Tex/TexFiles/Modules&CodeOrganization.tex
+++ b/Documentation/Tex/TexFiles/Modules&CodeOrganization.tex
@@ -1,5 +1,5 @@
-\include{./preamble}
-\begin{document}
+%\include{./preamble}
+%\begin{document}
 \section{Modules and code organization}
 \justifying
 The picture below represent the packages in which the application is organized.
@@ -47,4 +47,4 @@ First of all we follow the reverse-domain convention for the root package, befor
 	\end{figure}
 	
 \end{itemize}
-\end{document}
+%\end{document}
