--- a/Documentation/Tex/TexFiles/RottenMovies documentation.tex
+++ b/Documentation/Tex/TexFiles/RottenMovies documentation.tex
@@ -20,12 +20,21 @@
 
 
 
-%\include{./Intruduction.tex}
+\include{./Intruduction.tex}
 
-%\include{./Feasibility_Study.tex}
+\include{./Feasibility_Study.tex}
 
-%\include{./appendix.tex}
+\include{./Design.tex}
 
-%\include{./Design}
+\include{./DocumentDB.tex}
+
+\include{./GarphDB.tex}
+
+\include{./SoftwareArchitecture.tex}
+
+\include{./Modules&CodeOrganization.tex}
+
+\include{./appendix.tex}
+
 
 \end{document}
