--- a/Documentation/Tex/TexFiles/SoftwareArchitecture.tex
+++ b/Documentation/Tex/TexFiles/SoftwareArchitecture.tex
@@ -1,5 +1,5 @@
-\include{./preamble}
-\begin{document}
+%\include{./preamble}
+%\begin{document}
 
 \chapter{Software Architecture}
 \emph{Rotten Movies} is a web application developed in \emph{Java} that implements the Model-View-Controller (MVC) paradigm through
@@ -21,4 +21,4 @@ neo4j driver\footnote{https://neo4j.com/developer/java/} for Java, respectively
 
 \chapter{Instruction Manual}
 
-\end{document}
+%\end{document}
