--- a/Documentation/Tex/TexFiles/RottenMovies documentation.tex
+++ b/Documentation/Tex/TexFiles/RottenMovies documentation.tex
@@ -1,7 +1,7 @@
 \include{./preamble.tex}
 
 \author{Fabio Piras, Giacomo Volpi, Guillaume Quint}
-\title{Large-Scale adn Multi-structured Databases - Project: Rotten Movies}
+\title{Large-Scale and Multi-structured Databases - Project: Rotten Movies}
 \date{}
 \begin{document}
 \begin{figure}
