Minor fix in chapter number

--- a/Documentation/Tex/TexFiles/GarphDB.tex
+++ b/Documentation/Tex/TexFiles/GarphDB.tex
@@ -1,6 +1,7 @@
 %\include{./preamble}
 %\begin{document}
 \chapter{Graph database}
+\section{Introduction}
 \justifying
 The DBSM chosen for the graph database is Neo4j, it was use to manege the social part of the site and also to keep track of the reviews made for the feed and suggestion functionality.
 
