Add new url poster reference in feasibility study

--- a/Documentation/Tex/TexFiles/Feasibility_Study.tex
+++ b/Documentation/Tex/TexFiles/Feasibility_Study.tex
@@ -7,7 +7,7 @@
 \justifying
 The very first step was to perform is to look up for what type of data we need to create the application and how to handle it by performing a feasibility study.
 \section{Dataset analysis and creation}
-Initially we searched online for available dataset, we ended up with five different files coming from Kaggle and imdb with a combined storage of 4.18 GB:
+Initially we searched online for available dataset, we ended up with six different files coming from Kaggle and imdb with a combined storage of 4.18 GB:
 \begin{itemize}
   \item title\textunderscore principal.tsv  
   \item name\textunderscore basic.tsv 
@@ -15,6 +15,7 @@ Initially we searched online for available dataset, we ended up with five differ
   \item title\textunderscore crew.tsv
   \item rotten\textunderscore movies.csv
   \item rotten\textunderscore reviews.csv 
+  \item poster\textunderscore URL.csv
 \end{itemize} 
 \paragraph{}
 The first three were found on the imdb site containing general data about the title of the entries, type (not all were movies), cast, crew and other useful information. The last two came from Kaggle and they contain data scraped from the rotten tomatoes site regarding the movies rating and their reviews. All of these dataset were organized in a relational manner.
