--- a/Documentation/Tex/TexFiles/RottenMovies documentation.tex
+++ b/Documentation/Tex/TexFiles/RottenMovies documentation.tex
@@ -2,7 +2,8 @@
 
 \author{Fabio Piras, Giacomo Volpi, Guillaume Quint}
 \title{Large-Scale and Multi-structured Databases - Project: Rotten Movies}
-\date{}
+\date{Academic Year: 2022/2023}
+
 \begin{document}
 \begin{figure}
 \centering
