--- a/Documentation/Tex/TexFiles/DocumentDB.tex
+++ b/Documentation/Tex/TexFiles/DocumentDB.tex
@@ -2,22 +2,27 @@
 %\begin{document}
 \chapter{Document database}
 \justifying
-In this chapter we will discuss of the organization of the document database and how we handled the replicas. We decided to use MongoDB as DBMS for the document database for the purpose of storing the main information for movies, users, reviews and personnel. In MongoDB we created the following three collection: 
+In this chapter we will discuss the organization of the document database and how we handled the replicas. We decided to use MongoDB as DBMS for the document database for the purpose of storing the main information for movies, users, reviews and personnel. In MongoDB we created the following two collections: 
 \begin{itemize}
 	\item movie
 	\item user
 \end{itemize}
-Inside the movie collection there are embedded the documents for the reviews and personnel
+Inside the movie collection are embedded the documents for the reviews and personnel
 \section{Collection composition}
 \subsection{Movie collection}
-The following is the composition of the Movie collection.
+The following is the composition of a movie document in the collection.
 \lstinputlisting[language=json]{./../code/movie.json}
+\caption{Movie document}
+
 As previously stated the field personnel and review are arrays of embedded documents.
+
 \paragraph{}
 \subsection{User collection}
-The following is the composition of the User collection.
+The following is the composition of a user document in the collection.
 \lstinputlisting[language=json]{./../code/user.json}
-Is important to notice that in this collection we have two fields for the reviews, \emph{last3Reviews} and \emph{reviews} which present different ways of storing data for the same underling entity. As suggested by the name itself \emph{last3Reviews} contains the last three review in the form of an embedded document meanwhile \emph{reviews} contains all the reviews made by a user in the form of document linking towards the movie for which they were written; in particular, the link is formed by the id of the movie, the title and the position in which the review can be found in the array \emph{review} of the movie document. This structure was chosen so that we could avoid a full replica of the reviews in both collections and, at the same time, avoiding to perform join operation for those reviews that are more frequently checked, which are the most recent ones. The idea of creating a separated collection for reviews was immediately discarded because it would have resorted in a design for the document database that resemble a third normal form of relational database.
+\caption{User document}
+
+It is important to notice that in this collection we have two fields for the reviews, \emph{last3Reviews} and \emph{reviews} which present different ways of storing data for the same underling entity. As suggested by the name itself \emph{last3Reviews} contains the last three review in the form of an embedded document meanwhile \emph{reviews} contains all the reviews made by a user in the form of document linking towards the movie for which they were written; in particular, the link is formed by the id of the movie, the title and the position in which the review can be found in the array \emph{review} of the movie document. This structure was chosen so that we could avoid a full replica of the reviews in both collections and, at the same time, avoiding to perform join operation for those reviews that are more frequently checked, which are the most recent ones. The idea of creating a separated collection for reviews was immediately discarded because it would have implied a design for the document database that resembles a third normal form.
 
 \section{Indexes}
 In order to provide the best execution speed in search queries we use indexes. In particular we focus on the application part that is available also without registering to the site, like Hall of Fame and search movies functionalities. Without indexes we need a collection scan in user and movie collections to find the right document. \\
@@ -30,31 +35,33 @@ In order to provide the best execution speed in search queries we use indexes. I
 \item user\textunderscore rating
 \end{itemize}
 \lstinputlisting[language=Javascript]{./../code/executionStats/collStats_indexSizes_movie}
-
+\caption{Movie collection indexes}
 \subsection{User collection}
 \begin{itemize}
 \item username
 \item date\textunderscore of \textunderscore birth
 \end{itemize}
 \lstinputlisting[language=Javascript]{./../code/executionStats/collStats_indexSizes_user}
+\caption{User collection indexes}
 
-We decided to use these indexes because they provide a jump in term of speed in search queries without occupying much space. We accept the fact that writes are slower because our application is read-intesive. We consider the idea of using an index on personnel.primaryName but the cost in term of space was higher than potential benefit.
-For a full analityc report for the indexes you can see the appendix. \cref{mongoindexes}
+We decided to use these indexes because they provide a jump in term of speed in search queries without occupying much space. We accept the fact that writes are slower because our application is read-intesive. We consider the idea of using an index on personnel.primaryName but the cost in term of space was higher than the potential benefit, so we discarded it.
+For a full analytic report for the indexes, see appendix. \cref{mongoindexes}
 \section{Partition and replicas}
-To ensure high-availability we deploy a cluster of replica (3). We install and configure MongoDB in all machines, with these priorities 
+To ensure high availability we deploy a cluster of replicas (3). We install and configure MongoDB on all machines, with these priorities 
 \begin{enumerate}
  \item 172.16.5.26 (primary)
  \item 172.16.5.27 (secondary)
  \item 172.16.5.28 (secondary)
  \end{enumerate} 
-We decided to use \textbf{nearest read preference} and \textbf{W2 write preference}. In fact we can tolerate that users see temporarily an old version of data with a 33\% chanche. 
+We decided to use \textbf{nearest read preference} and \textbf{W2 write preference}. In fact we can tolerate that users see temporarily an old version of data with a 33\% chance. 
 
 \section{Aggregations}
-In this section we shall discuss on the different aggregation that the application will implement, the values between <<>> represent a values passed by an above level.
+In this section we shall discuss the different aggregations that the application will implement, the values between <<>> represent a value passed by an above level.
 
 \subsection{Return the best years by top critic and user ratings}\label{subsec:bestYear}
 \subsubsection{Mongo shell}
 \lstinputlisting[language=JavaScript]{./../code/bestYear.js}
+\caption{best_year.js}
 \subsubsection{Java implementation}
 \begin{lstlisting}[language=Java]
 AggregateIterable<Document> aggregateResult = collection.aggregate(
@@ -69,10 +76,11 @@ AggregateIterable<Document> aggregateResult = collection.aggregate(
                 )
         );
 \end{lstlisting}
-
+\caption{MovieMongoDB_DAO.java}
 \subsection{Return the best genres by top critic and user ratings}\label{subsec:HOFGenres}
 \subsubsection{Mongo shell}
 \lstinputlisting[language=JavaScript]{./../code/HOFGenres.js}
+\caption{best_genres.js}
 \subsubsection{Java implementation}
 \begin{lstlisting}[language=Java]
 AggregateIterable<Document> aggregateResult = collection.aggregate(
@@ -88,10 +96,11 @@ AggregateIterable<Document> aggregateResult = collection.aggregate(
                 )
         );
 \end{lstlisting}
-
+\caption{MovieMongoDB_DAO.java}
 \subsection{Return the best production houses by top critic and user ratings}\label{subsec:productionHouses}
 \subsubsection{Mongo shell}
 \lstinputlisting[language=JavaScript]{./../code/productionHouses.js}
+\caption{best_production_houses.js}
 \subsubsection{Java implementation}
 \begin{lstlisting}[language=Java]
 AggregateIterable<Document> aggregateResult = collection.aggregate(
@@ -106,10 +115,11 @@ AggregateIterable<Document> aggregateResult = collection.aggregate(
                 )
         );
 \end{lstlisting}
-
+\caption{MovieMongoDB_DAO.java}
 \subsection{Given a movie count the review it has received by each month}\label{subsec:reviewByYearMonth}
 \subsubsection{Mongo shell}
 \lstinputlisting[language=JavaScript]{./../code/reviewByYearMonth.js}
+\caption{movie_count.js}
 \subsubsection{Java implementation}
 \begin{lstlisting}[language=Java]
 Document yearDoc = new Document("year",new Document("$year","$review.review_date"));
@@ -127,10 +137,11 @@ Document yearDoc = new Document("year",new Document("$year","$review.review_date
                 )
         );
 \end{lstlisting}
-
+\caption{MovieMongoDB_DAO.java}
 \subsection{Given a user count the review he/she has made divided by genres}\label{subsec:preferredGenres}
 \subsubsection{Mongo shell}
 \lstinputlisting[language=JavaScript]{./../code/preferredGenres.js}
+\caption{genre_count.js}
 \subsubsection{Java implementation}
 \begin{lstlisting}[language=Java]
 AggregateIterable<Document> aggregateResult = collectionMovie.aggregate(
@@ -144,10 +155,11 @@ AggregateIterable<Document> aggregateResult = collectionMovie.aggregate(
                 )
         );
 \end{lstlisting}
-
+\caption{BaseUserMongoDB_DAO.java}
 \subsection{Return the number of user divided by an age bucket}\label{subsec:userPopulationBucket}
 \subsubsection{Mongo shell}
 \lstinputlisting[language=JavaScript]{./../code/userPopulationBucket.js}
+\caption{user_population.js}
 \subsubsection{Java implementation}
 \begin{lstlisting}[language=Java]
 BucketOptions opt = new BucketOptions();
@@ -166,7 +178,8 @@ BucketOptions opt = new BucketOptions();
                 )
         );
 \end{lstlisting}
+\caption{AdminMongoDB_DAO.java}
 
-\section{Sharding consideration}
-We consider the possibility of sharding the movie collection, with the benefit of much less space occupation, using id as a possible sharding key. However we realized that we search movie not only by id but also with their primary titles, their years, etc. With these range of queries we ended up in a query flooding scenario, where every replica must be consulted in order to find the document.
+\section{Sharding considerations}
+We consider the possibility of sharding the movie collection, with the benefit of much less space occupation, using id as a possible sharding key. However we realized that we search movies not only by id but also with their primary titles, their years, etc. With these type of queries we end up in a query flooding scenario, where every replica must be consulted in order to find the appropriate document.
  %\end{document}
