--- a/Documentation/Tex/TexFiles/Intruduction.tex
+++ b/Documentation/Tex/TexFiles/Intruduction.tex
@@ -6,10 +6,10 @@
 \chapter{Introduction}
 \justifying
 \paragraph{}
-Rotten Movies is a web service where user can keep track of the general liking for movies, they can also share their thoughts with the world after signing up. In addition user can follow renowned top critic to be constantly updated with their latest review.
+Rotten Movies is a web service where users can keep track of the general liking for movies, they can also share their thoughts with the world after signing up. In addition users can follow renowned top critic to be constantly updated with their latest reviews.
 \paragraph{}
-Guest user, as well as all other, can browse or search movies based on filters like: title, year of release and actor who worked in it. They can also view a Hall of Fame for the most positive review genres, production houses and years in which the best movie were released.
+Guest users, as well as all others, can browse or search movies based on filters like: title, year of release and personnel who worked in it. They can also view a Hall of Fame for the most positive review genres, production houses and years in which the best movies were released.
 \paragraph{}
-For this project, the application has been developed in Java with the Spring framework and as Thymeleaf as engine to implement a web GUI. The application use a document database to store the main information about the movies, user, review and actor; a graph database is instead used to keep track of the relationship between normal user and top critic in terms of who follows who and between the movie and the user who reviewed it.
+For this project, the application has been developed in Java with the Spring framework and Thymeleaf as templating engine to implement a web GUI. The application uses a document database to store the main information about movies, users, reviews and personnel; a graph database is instead used to keep track of the relationship between normal users and top critics in terms of who follows who and between the movies and the users who reviewed it.
 %\end{document}
 
